--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav class="navbar">
         <div class="container-1">
-            <a href="#" class="logo"><img src="img/logo-tur.png" height="50px" width="150px"></a>
+            <a href="#" class="logo"><img src="logo-tur.png" height="50px" width="150px"></a>
         </div>
     </nav>
 
@@ -27,7 +27,7 @@
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/nasi-krawu.jpeg" class="d-block w-100" alt="...">
+                <img src="nasi-krawu.jpeg" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
@@ -46,7 +46,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/041820100_1665377757-shutterstock_2048188355-1024x576.png" class="d-block w-100" alt="...">
+                  <img src="041820100_1665377757-shutterstock_2048188355-1024x576.png" class="d-block w-100" alt="...">
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/6328795f2851e.jpg" class="d-block w-100" alt="...">
+                  <img src="6328795f2851e.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/Krawu1.jpg" class="d-block w-100" alt="...">
+                <img src="Krawu1.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
